	* configs/shenzhou/nxwm:  Added an NxWM configuratino for the
	  Shenzhou board.  This is untested on initial check-in.  It will
	  be used to verify the Shenzhou LCD driver (and eventually the
	  touchscreen driver).
	* configs/shenzhou/src/up_touchscreen.c:  Add ADS7843E touchscreen
	  support for the Shenzhou board.  The initial check-in is untested
	  and basically a clone of the the touchscreen support fro the SAM-3U.
	* tools/cfgparser.c: There are some NxWidget configuration
	  settings that must be de-quoted.
	* arch/arm/src/stm32/Kconfig: There is no SPI4.  Some platforms
	  SPI3 and some do not (still not clear).
	* nuttx/configs/shenzhou: Various fixes to build new NxWM
	  configuration.
	* configs/shenzhou:  Oops.  The Shenzhou LCD is and SSD1289,
	  not an ILI93xx.
	* configs/shenzhou/src/up_ssd1289.c: The LCD is basically functional
	  on the Shenzhou board.
	* graphics/nxmu:  Correct some bad parameter checking that caused
	  failures when DEBUG was enabled.
	* arch/arm/src/armv7-m/nvic.h:  Add bit definitions for the AIRCR
	  register.
	* drivers/input/ads7843.c:  Need semaphore protection in logic
	  that samples the position.
	* drivers/lcd/ssd1289.c:  On some platforms we are unable to
	  read the device ID -- reason unknown; workaround in place.
	* drivers/input/ads7843.c:  Add thresholding options and an
	  option to swap X and Y positions.  Fix some logic errors in
	  the SPI locking/selecting logic.
	* arch/arm/src/armv7-m/up_systemreset.c:  Add logic to reset
	  the Cortex-Mx using the AIRCR register.  Contributed by Darcy
	  Gong.
	* arch/arm/src/stm32/up_eth.c:  Add logic specifically for the
	  DM9161 PHY.  If the DM9161 failed to initialize, then use the
	  up_sysemreset() logic to reset the MCU.  Contributed by Darcy
	  Gong.
	* arch/arm/src/stm32/stm32_gpio.c:  Add missing logic to set bit
	  for SPI3 remap.  This fixes the XPT2046 touchscreen driver using
	  drivers/input/ads7843.c